--- a/app.css
+++ b/app.css
@@ -1,36 +1,21 @@
 body {
-    background: #ffe4e1;
-    /* font-family: 'Sofia', cursive; */
-    font-family: 'Rochester', cursive;
+    font-family: 'Josefin Slab', serif;
     letter-spacing: .15rem;
-    color: white;
+    color: #524D46;
 }
 
-#mainNavbar {
-    background: white;
-    font-size: 2rem;
-    font-weight: 100;
-    letter-spacing: .05rem;
+.content {
+
 }
 
-#mainNavbar .nav-link {
+.btn .btn-success {
+    background-color: #2FB144;
+}
+
+#header {
     color: #2FB144;
-}
-
-#mainNavbar .nav-link:hover {
-    color: #FAF323;
-}
-
-#mainNavbar .navbar-toggler {
-    border: 2px solid #2FB144; 
-}
-
-#mainNavbar .navbar-brand {
-    font-family: 'Rochester', cursive;
-    font-size: 2rem;
     font-weight: 100;
-    letter-spacing: .05rem;
-    color: #2FB144;
+    margin: 0px;
 }
 
 .headingGroup h2 {
@@ -39,13 +24,112 @@ body {
 }
 
 .blurb p {
-    color: white;
     font-size: 1rem;
 }
 
-.content {
-    margin-top: 80px;
+/* Jumbotron Styles */
+
+#jumbo {
+    margin:0;
+    padding:80px 60px 15px 60px;
+    /* margin: 1rem 0rem 1rem 0rem; */
 }
+
+.jumbotron {
+    background-image: url(imgs/teal-cupcakes.jpg);
+    background-position: center;
+    background-size: cover;
+    min-height: 600px;
+}
+
+/* Creations Gallery */
+
+#creations {
+
+}
+
+/* Card Hover Overlay effect */
+
+.card-image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  
+  .card:hover .card-image {
+    opacity: 0.3;
+  }
+  
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgb(119, 119, 119);
+    background: rgba(119, 119, 119, 0.2); /* Black see-through */
+    color: #f1f1f1; 
+    width: 100%;
+    height: 100%;
+    transition: .5s ease;
+    opacity:0;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .card:hover .overlay {
+    opacity: 1;
+  }
+  
+  .card-body {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      font-family: 'Josefin Slab', serif;
+      letter-spacing: .15rem;
+      color: #524D46;
+      text-align: center;
+      line-height: 0.6;
+  }
+  
+
+/* Navbar Styles */
+
+  #mainNavbar .navbar-brand {
+    margin:0;
+    font-family: 'Rochester', cursive;
+    font-size: 1.8rem;
+    font-weight: 100;
+    letter-spacing: .05rem;
+    color: #2FB144;
+}
+
+#mainNavbar {
+    background: white;
+    font-family: 'Josefin Slab', serif;
+    font-size: 1.25rem;
+    font-weight: 300;
+    letter-spacing: .05rem;
+}
+
+#mainNavbar .nav-link {
+    color: #524D46;
+}
+
+#mainNavbar .nav-link:hover {
+    color: #FAF323;
+}
+
+/* ... */
 
 @media (max-width: 1200px) {
     .headingGroup h2 {
